@startuml Condition Browser – Class Diagram
title Condition Browser · Class Diagram

skinparam defaultFontName Roboto
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFCFA

skinparam class {
  BackgroundColor #E8F5E9
  BorderColor     #2E7D32
  HeaderBackgroundColor #C8E6C9
}

' ───────────────────────────────────
'  Composable Screens
' ───────────────────────────────────

class CategoryScreen <<@Composable>> {
  - categories : List<Category>
  + onCategoryTap(category: Category)
}

class ConditionPickerScreen <<@Composable>> {
  - conditions : List<LeafCondition>
  - categoryName : String
  + onConditionTap(c: LeafCondition)
  + onModifyCustom(c: CustomCondition)
  + onDeleteCustom(id: Long)
}

class CustomConditionDialog <<@Composable>> {
  - title : String
  - statement : String
  - refreshFreqValue : Int
  - refreshFreqUnit : TimeUnit
  - isEditMode : Boolean
  + onTitleChange(t: String)
  + onStatementChange(s: String)
  + onFreqValueChange(v: Int)
  + onFreqUnitChange(u: TimeUnit)
  + onSave()
  + onDelete()
}

' ───────────────────────────────────
'  ViewModel
' ───────────────────────────────────

class ConditionBrowserViewModel {
  - repo : IConditionRepository
  --
  + categories : StateFlow<List<Category>>
  --
  + upsertCustom(c: CustomCondition)
  + deleteCustom(id: Long)
}

' ───────────────────────────────────
'  Interface (external)
' ───────────────────────────────────

interface IConditionRepository <<interface>> {
  + getCategories(): Flow<List<Category>>
  + upsertCustom(c: CustomCondition): suspend Unit
  + deleteCustom(id: Long): suspend Unit
}

' ───────────────────────────────────
'  Models
' ───────────────────────────────────

class Category <<data class>> {
  + name : String
  + conditions : List<LeafCondition>
}

class LeafCondition <<data class>> {
  + category : String
  + type : String
  + label : String
  + value : Any?
}

class CustomCondition <<data class>> {
  + id : Long
  + title : String
  + statement : String
  + refreshFrequency : RefreshFrequency
}

class RefreshFrequency <<data class>> {
  + value : Int
  + unit : TimeUnit
}

enum TimeUnit {
  SECONDS
  MINUTES
  HOURS
  DAYS
}

' ───────────────────────────────────
'  Relationships
' ───────────────────────────────────

CategoryScreen --> ConditionBrowserViewModel : observes
ConditionPickerScreen --> ConditionBrowserViewModel : observes
CustomConditionDialog --> ConditionBrowserViewModel : CRUD
ConditionBrowserViewModel --> IConditionRepository : delegates

Category o-- "0..*" LeafCondition
CustomCondition *-- RefreshFrequency
RefreshFrequency --> TimeUnit

CategoryScreen .right.> ConditionPickerScreen : navigates
ConditionPickerScreen .right.> CustomConditionDialog : opens dialog

@enduml
